--- a/bills.html
+++ b/bills.html
@@ -1,148 +1,133 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bills - Buy Data Bundles</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Buy Data</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to bottom right, #ff0000, #fff);
       margin: 0;
-      padding: 0;
-      background: #f4f4f4;
+      padding: 20px;
+      color: #000;
     }
-    header {
-      background-color: #d0021b;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-      font-size: 1.5rem;
-    }
-    .container {
-      padding: 1rem;
+    h2 {
+      color: #b50000;
     }
     .bundle {
-      background: white;
-      padding: 1rem;
-      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      padding: 15px;
       border-radius: 10px;
+      margin: 10px 0;
+      background: #fff;
       display: flex;
       align-items: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      justify-content: space-between;
     }
     .bundle img {
       width: 40px;
       height: 40px;
-      margin-right: 1rem;
     }
-    .bundle-info {
-      flex-grow: 1;
+    .success {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.7);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      font-size: 20px;
+      z-index: 999;
     }
-    .bundle-info h4 {
-      margin: 0;
+    .success.show {
+      display: flex;
+      animation: popin 0.5s ease-in-out;
     }
-    .bundle button {
-      padding: 0.5rem 1rem;
-      background: #d0021b;
+    @keyframes popin {
+      0% { transform: scale(0.7); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+    button {
+      background-color: #d40000;
       color: white;
       border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .bundle button:hover {
-      background: #a00014;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-size: 16px;
     }
   </style>
 </head>
 <body>
-  <header>Buy Data Bundles</header>
-
-  <div class="container">
-    <div class="bundle">
-      <img src="airtel.png" alt="Airtel" />
-      <div class="bundle-info">
-        <h4>Airtel 500MB - ₦100</h4>
-      </div>
-      <button onclick="buyBundle('Airtel', '500MB', 100)">Buy</button>
-    </div>
-
-    <div class="bundle">
-      <img src="airtel.png" alt="Airtel" />
-      <div class="bundle-info">
-        <h4>Airtel 700MB - ₦150</h4>
-      </div>
-      <button onclick="buyBundle('Airtel', '700MB', 150)">Buy</button>
-    </div>
-
-    <div class="bundle">
-      <img src="mtn.png" alt="MTN" />
-      <div class="bundle-info">
-        <h4>MTN 1GB - ₦150</h4>
-      </div>
-      <button onclick="buyBundle('MTN', '1GB', 150)">Buy</button>
-    </div>
-
-    <div class="bundle">
-      <img src="glo.png" alt="Glo" />
-      <div class="bundle-info">
-        <h4>Glo 1GB - ₦130</h4>
-      </div>
-      <button onclick="buyBundle('Glo', '1GB', 130)">Buy</button>
-    </div>
-
-    <div class="bundle">
-      <img src="9mobile.png" alt="9mobile" />
-      <div class="bundle-info">
-        <h4>9mobile 1GB - ₦120</h4>
-      </div>
-      <button onclick="buyBundle('9mobile', '1GB', 120)">Buy</button>
-    </div>
+  <h2>Buy Data Bundles</h2>
+  <div id="bundles"></div>
+  <div class="success" id="successBox">
+    <div id="successMessage"></div>
+    <br>
+    <button onclick="closeSuccess()">OK</button>
   </div>
-
   <script>
-    function getUsername() {
-      return localStorage.getItem('username') || 'User';
-    }
+    const bundles = [
+      { network: 'Airtel', price: 100, size: '500MB', logo: 'https://upload.wikimedia.org/wikipedia/commons/6/6e/Airtel_logo.png' },
+      { network: 'Airtel', price: 150, size: '700MB', logo: 'https://upload.wikimedia.org/wikipedia/commons/6/6e/Airtel_logo.png' },
+      { network: 'MTN', price: 150, size: '1GB', logo: 'https://upload.wikimedia.org/wikipedia/commons/5/51/MTN_Logo.svg' },
+      { network: 'Glo', price: 130, size: '1GB', logo: 'https://upload.wikimedia.org/wikipedia/commons/0/01/Globacom_logo.png' },
+      { network: '9mobile', price: 120, size: '1GB', logo: 'https://upload.wikimedia.org/wikipedia/en/thumb/1/16/9mobile_logo.svg/2560px-9mobile_logo.svg.png' },
+    ];const bundlesDiv = document.getElementById('bundles');
+const balance = parseInt(localStorage.getItem('balance') || '0');
+const successBox = document.getElementById('successBox');
+const successMessage = document.getElementById('successMessage');
 
-    function getBalance() {
-      return parseFloat(localStorage.getItem('balance')) || 0;
-    }
+function updateHistory(item) {
+  const history = JSON.parse(localStorage.getItem('history') || '[]');
+  history.push({
+    type: 'Data Purchase',
+    network: item.network,
+    size: item.size,
+    amount: item.price,
+    date: new Date().toLocaleString(),
+  });
+  localStorage.setItem('history', JSON.stringify(history));
+}
 
-    function setBalance(amount) {
-      localStorage.setItem('balance', amount);
-    }
+function buyData(item) {
+  let currentBalance = parseInt(localStorage.getItem('balance') || '0');
+  if (currentBalance < 3500) {
+    alert('Please fund your wallet (minimum ₦3500 required).');
+    return;
+  }
+  if (currentBalance >= item.price) {
+    currentBalance -= item.price;
+    localStorage.setItem('balance', currentBalance);
+    updateHistory(item);
+    successMessage.innerHTML = `🎉🎊 Dear User, you have successfully purchased <b>${item.size}</b> of <b>${item.network}</b> for ₦${item.price}!`;
+    successBox.classList.add('show');
+  } else {
+    alert('Insufficient balance.');
+  }
+}
 
-    function buyBundle(network, size, price) {
-      const balance = getBalance();
+function closeSuccess() {
+  successBox.classList.remove('show');
+  window.location.href = 'dashboard.html';
+}
 
-      if (balance < 3500) {
-        alert("⚠️ Please fund wallet to at least ₦3500 before buying bundles.");
-        return;
-      }
+bundles.forEach(item => {
+  const div = document.createElement('div');
+  div.className = 'bundle';
+  div.innerHTML = `
+    <div><img src="${item.logo}" alt="logo"> ${item.network} - ${item.size}</div>
+    <div>
+      ₦${item.price} <button onclick='buyData(${JSON.stringify(item)})'>Buy</button>
+    </div>
+  `;
+  bundlesDiv.appendChild(div);
+});
 
-      if (balance < price) {
-        alert("❌ Insufficient balance to complete this purchase.");
-        return;
-      }
-
-      const newBalance = balance - price;
-      setBalance(newBalance);
-
-      // Save to transaction history
-      const history = JSON.parse(localStorage.getItem("transactions")) || [];
-      const newTransaction = {
-        type: "Data Bundle",
-        network,
-        size,
-        price,
-        date: new Date().toLocaleString()
-      };
-      history.unshift(newTransaction);
-      localStorage.setItem("transactions", JSON.stringify(history));
-
-      alert(`🎉 Dear ${getUsername()}, your ${network} ${size} bundle purchase of ₦${price} was successful!`);
-      window.location.href = "dashboard.html";
-    }
   </script>
 </body>
-      </html>
+</html>
